# portfolio-manager

./: .gitignore  CLAUDE.md  README.md  REMAINING_ITEMS.md  WORKING_NOTES.md  quickstart_validation_report.json  test_auth.md
backend/: .env.example  DEPLOYMENT.md  README.md  add_dummy_holdings.py  add_dummy_news.py  add_holdings_to_current_portfolio.py  add_real_api_usage.py  add_sample_api_data.py  add_test_user.py  add_transactions_api.py  alembic.ini  check_market_data.py  check_portfolio_updates.py  check_users.py  cleanup_db.py  create_admin.py  create_admin_user.py  create_test_portfolio_metrics.py  create_test_scheduler_data.py  debug_frontend_mismatch.py  debug_full.py  debug_service.py  debug_sql.py  fixed_provider_details.py  populate_dev_data.py  populate_market_data_minimal.py  portfolio 2.db  portfolio.db  pyproject.toml  pytest.ini  quick_setup.py  reset_test_user.py  setup_test_data.py  setup_users_stocks.py  temp_scheduler_fix.py  test.db  test_admin_api.py  test_api_usage_metrics_debug.py  test_backend_import_fix_tdd.py  test_comprehensive_admin_fix.py  (+16 more)
backend/alembic/: env.py
backend/alembic/versions/: 069a794bf481_rename_api_usage_metrics_to_market_data_.py  0c1dbab347e4_add_performance_indexes_for_common_.py  26dce3bcb832_add_portfolio_update_metrics_tables_for_.py  2842139f0989_add_role_field_to_users_table.py  329f54ef5a2c_add_market_data_tables.py  36e309dd1c92_fix_market_data_column_names.py  41c34498acdf_add_audit_logs_table_for_comprehensive_.py  42d56891bcef_create_audit_logs_table.py  4e2cac80bf09_add_scheduler_executions_table_for_.py  4e7c61ec3018_add_avg_response_time_ms_to_api_usage_.py  5209bda65d3e_add_portfolio_management_models.py  551c4dbedf91_add_price_last_updated_field_to_.py  5722cbbf8ed5_add_missing_portfolio_metrics_tables_.py  (+13 more)
backend/config/: adapters.example.yaml
backend/docs/: single-master-symbol-table-architecture.md
backend/scripts/: populate_market_data.py
backend/src/: __init__.py  database.py  fix_database_timestamps.py  main.py
backend/src/api/: __init__.py  (+14 more)
backend/tests/: conftest.py  factories.py  test_admin_api_metrics_exposure_tdd.py  test_admin_api_metrics_fix_tdd.py  test_admin_dashboard_activities.py  test_admin_data_updates.py  test_admin_datetime_formatting_tdd.py  test_admin_datetime_tdd_simple.py  test_admin_ui_metrics_integration_tdd.py  test_api_keys_datetime_tdd.py  test_api_usage_logging.py  test_api_usage_metrics_table_tdd.py  test_api_usage_metrics_tracking_tdd.py  test_bulk_fetch_symbols_issue_tdd.py  test_bulk_market_data.py  test_bulk_updates_toggle_tdd.py  test_database_schema_completeness.py  test_decimal_json_serialization_fix_tdd.py  test_dynamic_scheduler_symbols.py  test_holding_timestamps_tdd.py  test_holdings_daily_change_display_tdd.py  test_holdings_timestamp_bug_tdd.py  test_live_admin_integration.py  test_logging_datetime_tdd.py  test_market_data_freshness_tdd.py  test_market_data_population_tdd.py  test_market_data_stock_update_tdd.py  test_market_data_usage_metrics_model_rename_tdd.py  test_opening_price_fixes_tdd.py  test_portfolio_pl_improvements_tdd.py  test_portfolio_timestamp_updates_tdd.py  test_portfolio_todays_change_bug_tdd.py  test_price_consistency_tdd.py  test_provider_adapter_refactor.py  test_provider_detail_page.py  test_provider_toggle.py  test_queue_metrics_integration.py  test_queue_metrics_unknown_status_bug_tdd.py  test_recent_activity_data.py  test_scheduler_database_session_debug_tdd.py  (+22 more)
(+420 files in other folders)
