[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stephen Eaton", email = "seaton@strobotics.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "aioprometheus>=23.12.0",
    "aiohttp>=3.10.0",
    "alembic>=1.16.5",
    "alpha-vantage>=3.0.0",
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "class-registry>=2.1.2",
    "dependency-injector>=4.41.0",
    "email-validator>=2.2.0",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pybreaker>=1.0.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
    "cryptography>=46.0.1",
]

[project.scripts]
portfolio-backend = "portfolio_backend:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/services/adapters/providers/*.py" = ["B008"]  # Allow dependency injection in function defaults
"src/services/adapters/base_adapter.py" = ["B027"]  # Allow empty methods in abstract base classes
"tests/contract/*.py" = ["F841"]  # Allow unused variables in test setup

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["migrations"]
